--- a/index.html
+++ b/index.html
@@ -4,4 +4,8 @@
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 layout: home
 author_profile: true
+header:
+  overlay_filter: "0.5"
+  overlay_image: /assets/images/Sunrise.jpeg
+  tagline: "Imagine. Design. Build."
 ---
